# haskell-memory-halp

./: .gitignore  LICENSE  README.org  haskell-halp.cabal  input-head.yaml  makeit  stack.yaml
app/: Attempt1.hs  Attempt2.hs  Attempt3.hs  Attempt4.hs
other-src/: SharedJunk.hs
saved/: attempt1.ps  attempt2.ps
