name:                haskell-halp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ExpHP/haskell-halp#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Lamparski
maintainer:          diagonaldevice@gmail.com
copyright:           Copyright 2017 Michael Lamparski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable attempt1
  hs-source-dirs:      app
  main-is:             Attempt1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , vector
                     , haskell-halp
                     , conduit
                     , unordered-containers
                     , text
                     , mtl
                     , conduit-combinators
                     , yaml
                     , resourcet
                     , parsers
                     , transformers
                     , conduit-parse
                     , bytestring
                     , binary

  default-language:    Haskell2010

executable attempt2
  hs-source-dirs:      app
  main-is:             Attempt2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , vector
                     , parsers
                     , conduit-parse
                     , transformers
                     , unordered-containers
                     , resourcet
                     , haskell-halp
                     , text
                     , conduit-combinators
                     , conduit
                     , yaml
                     , bytestring
                     , binary

  default-language:    Haskell2010

executable attempt3
  hs-source-dirs:      app
  main-is:             Attempt3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , vector
                     , conduit-combinators
                     , unordered-containers
                     , conduit
                     , transformers
                     , resourcet
                     , haskell-halp
                     , parsers
                     , conduit-parse
                     , text
                     , yaml
                     , bytestring
                     , binary

  default-language:    Haskell2010

executable attempt4
  hs-source-dirs:      app
  main-is:             Attempt4.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , vector
                     , conduit-combinators
                     , unordered-containers
                     , conduit
                     , transformers
                     , resourcet
                     , haskell-halp
                     , parsers
                     , conduit-parse
                     , text
                     , yaml
                     , bytestring
                     , binary
                     , deepseq

  default-language:    Haskell2010

library
  hs-source-dirs:      other-src
  exposed-modules:     SharedJunk
  build-depends:       base
                     , aeson
                     , vector
                     , conduit
                     , conduit-combinators
                     , unordered-containers
                     , parsers
                     , conduit-parse
                     , transformers
                     , resourcet
                     , deepseq
                     , text
                     , yaml
                     , bytestring
                     , binary
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/ExpHP/haskell-halp
